# aegis

./: .gitignore  CLAUDE.md  Dockerfile  QUICKSTART.md  README.md  TODO.md  aegis.env.example  agent.env.example  agent_config.json  clawshield.env.example  docker-compose.dev.yml  docker-compose.yml  install.sh  pyproject.toml  seccomp.json
.github/workflows/: ci.yml
agent/: Dockerfile  audit.py  loop.py  main.py  requirements.txt  tools.py  web.py
demo/: attack.txt  attack2.txt  attack3.txt  attack4.txt  attack6.txt
docs/: agent-builder.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ActivityLog.tsx  Chat.tsx  Dashboard.tsx  EventCard.tsx  EventFeed.tsx  Header.tsx  ThreatToast.tsx  Wizard.tsx
frontend/src/hooks/: useSSE.ts
src/aegis/: __init__.py  config.py  domain_filter.py  hardening.py  log_adapter.py  main.py  proxy.py  scanner.py  wizard.py
src/clawshield/: __init__.py  chat.py  config.py  domain_filter.py  engine.py  events.py  hardening.py  main.py  proxy.py  scanner.py  wizard.py
static/: app.js  dashboard.html  style.css  wizard.html
tests/: test_config.py  test_events.py  test_hardening.py  test_log_adapter.py  test_proxy.py  test_scanner.py  test_wizard.py
