[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawshield"
version = "1.0.0"
description = "Agent-agnostic security and deployment platform for OpenClaw-compatible agents"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
clawshield = "clawshield.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/clawshield"]
